<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autoSizePresetSizes="@array/autosize_text_sizes"
        android:autoSizeTextType="uniform"
        android:background="#F7F8FA"
        android:fontFamily="@font/questrial"
        android:gravity="center"
        android:text="@string/menu_contact_us"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F7F8FA"
        android:paddingBottom="10dp"
        android:text="___________________________________"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:id="@+id/contact_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:paddingLeft="60dp"
            android:paddingRight="90dp">

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_room_black_48" />

            <TextView
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/location_image"
                android:autoSizePresetSizes="@array/autosize_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:minHeight="30dp"
                android:text="@string/address_line_1" />

            <TextView
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_line_1"
                android:layout_toRightOf="@id/location_image"
                android:autoSizePresetSizes="@array/autosize_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:minHeight="30dp"
                android:text="@string/address_line_2" />

            <TextView
                android:id="@+id/phone_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_line_2"
                android:layout_marginTop="24dp"
                android:autoSizePresetSizes="@array/autosize_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:minHeight="30dp"
                android:text="@string/phone_1" />

            <TextView
                android:id="@+id/phone_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_1"
                android:layout_marginTop="24dp"
                android:autoSizePresetSizes="@array/autosize_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:minHeight="30dp"
                android:text="@string/phone_2" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_2"
                android:layout_marginTop="24dp"
                android:autoSizePresetSizes="@array/autosize_text_sizes"
                android:autoSizeTextType="uniform"
                android:gravity="end"
                android:minHeight="30dp"
                android:text="@string/mail_address" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignTop="@id/social_media_handles"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:background="#000000" />


        <LinearLayout
            android:id="@+id/social_media_handles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/fb_logo" />

            <ImageView
                android:id="@+id/twitter_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/twitter_logo" />

            <ImageView
                android:id="@+id/linkedin_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/lin_logo" />

            <ImageView
                android:id="@+id/instagram_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/insta_logo" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>